codama-macros/tests/codama_attribute/account_directive/invalid_writable.fail.stderr
error: expected a boolean
 --> tests/codama_attribute/account_directive/invalid_writable.fail.rs:3:29
  |
3 | #[codama(account(writable = invalid))]
  |                             ^^^^^^^
